# smartfo

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SKILL.md  devbox.json  docker-compose.yml  flake.nix  justfile  project.json  run.sh
.agents/workflows/: smartfo-git.md
.github/workflows/: ci.yml
benches/: agent_mode_benchmarks.rs
internal-docs/: kubernetes-health-check-examples.md  smartfo-requirements.md
internal-docs/feature/: 20260609-install-warn-aliases.md
internal-docs/feature/20260604-smartfo-initial-reqs/: 20260604-smartfo-initial-reqs.md
internal-docs/feature/20260604-smartfo-initial-reqs/tasks/: index-smartfo-initial-reqs.md  tasks-smartfo-initial-reqs-02-002-install-mode.md  tasks-smartfo-initial-reqs-03-002-rm-mode.md  tasks-smartfo-initial-reqs-04-001-job-queue.md  (+6 more)
internal-docs/feature/20260607-cli-standards/: prd-cli-standards-compliance.md
internal-docs/feature/20260608-cli-axi/: benchmark-results.md  prd-20260608-cli-axi.md  test-coverage-report.md
internal-docs/feature/20260610-requirements-gaps/: 20260610-requirements-gaps.md  compliance-audit-2026-06-11a.md  compliance-audit-2026-06-11b.md
internal-docs/feature/20260611-feature-gaps/: 2026066611-feature-gaps.md
internal-docs/requirements/20260604-smartfo-initial-reqs/: 20260604-smartfo-initial-reqs.md
scripts/: git-repo-manager.sh
scripts/tests/: mv-rm-matrix.sh
src/: audit.rs  cli.rs  completions.rs  config.rs  confirmation.rs  daemon.rs  dry_run.rs  error.rs  exit.rs  export.rs  git_hooks.rs  globbing.rs  health.rs  hooks.rs  install.rs  lib.rs  logging.rs  main.rs  man.rs  mv.rs  privacy.rs  progress.rs  queue.rs  resource.rs  rm.rs  secret.rs  signal.rs  skill.rs  terminal.rs  trash.rs  tui.rs  vcs.rs  worker.rs
src/output/: aggregates.rs  empty.rs  mod.rs  schema.rs  suggestions.rs  toon.rs  truncation.rs
tests/: README.md  aggregates_test.rs  cli_mode_tests.rs  cli_standards_utils.rs  cli_tests.rs  config_validation_tests.rs  dry_run_tests.rs  empty_test.rs  export_integration_test.rs  formatting_tests.rs  globbing_tests.rs  health_test.rs  hooks_test.rs  logging_tests.rs  noargs_test.rs  output_discipline_test.rs  pager_tests.rs  schema_test.rs  signal_tests.rs  skill_test.rs  suggestions_test.rs  toon_benchmark.rs  toon_test.rs  tui_test.rs
tests/integration_tests/: agent_skills.rs  agent_workflow.rs  aggregates_test.rs  async_mv.rs  async_rm.rs  content_first_no_args.rs  content_first_test.rs  content_truncation.rs  contextual_disclosure.rs  crash_recovery.rs  cross_device.rs  cross_platform_test.rs  empty_states.rs  empty_states_test.rs  fixtures.rs  force_delete.rs  install.rs  job_management.rs  minimal_schemas.rs  mod.rs  mode_selection.rs  mv_scenarios.rs  overwrite_modes.rs  pre_computed_aggregates.rs  session_hooks.rs  structured_errors.rs  toon_format.rs  trash_mode.rs
tests/platform/: linux_config.rs  macos_config.rs  mod.rs  platform_test.rs  setup.sh  windows_config.rs
tests/platform/fixtures/: mod.rs  paths.rs
tests/property/: README.md  audit_validity.rs  config_reload.rs  content_truncation.rs  cross_platform_paths.rs  daemon_queue.rs  disk_space_culling.rs  force_delete.rs  hook_detection.proptest-regressions  hook_detection.rs  install_idempotency.rs  mod.rs  no_data_loss.rs  privacy_mode.rs  resource_limits.rs  same_file_history.rs  session_hooks.proptest-regressions  session_hooks.rs  toon_format.rs  trash_mode.rs  trash_preserve.proptest-regressions  trash_preserve.rs  vcs_consistency.proptest-regressions  vcs_consistency.rs
(+88 files in other folders)
