[package]
name = "smartfo"
version = "0.1.0"
edition = "2021"
description = "VCS-aware safe mv/rm replacement with trash and audit"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
ctrlc = "3.4"
indicatif = "0.17"
glob = "0.3"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
chrono = "0.4"
ansi_term = "0.12"
once_cell = "1.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
