[package]
name = "smartfo"
version = "0.1.0"
edition = "2021"
description = "VCS-aware safe mv/rm replacement with trash and audit"

[lib]
name = "smartfo"
path = "src/lib.rs"

[[bin]]
name = "smartfo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
anyhow = "1.0"
tempfile = "3.8"
thiserror = "1.0"
directories = "5.0"
ctrlc = "3.4"
indicatif = "0.17"
glob = "0.3"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ansi_term = "0.12"
once_cell = "1.18"
rusqlite = { version = "0.30", features = ["bundled"] }
toml = "0.8"
nix = { version = "0.27", features = ["user", "process", "signal", "socket", "fs"] }
libc = "0.2"
which = "6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.4"
fs_extra = "1.3"
serde_json = "1.0"
criterion = "0.5"

[[test]]
name = "integration_tests"
path = "tests/integration_tests/mod.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[test]]
name = "cli_mode_tests"
path = "tests/cli_mode_tests.rs"

[[test]]
name = "toon_test"
path = "tests/toon_test.rs"

[[test]]
name = "toon_benchmark"
path = "tests/toon_benchmark.rs"

[[test]]
name = "hooks_test"
path = "tests/hooks_test.rs"

[[test]]
name = "globbing_tests"
path = "tests/globbing_tests.rs"

[[test]]
name = "output_discipline_test"
path = "tests/output_discipline_test.rs"

[[test]]
name = "logging_tests"
path = "tests/logging_tests.rs"

[[test]]
name = "signal_tests"
path = "tests/signal_tests.rs"

[[test]]
name = "dry_run_tests"
path = "tests/dry_run_tests.rs"

[[bench]]
name = "agent_mode_benchmarks"
harness = false
